Fix #104450: Webapp doesn't update assigned worker in task list
Include the worker UUID and Name in task updates, so that the webapp
properly updates that info in the task list.
