# addon/flamenco/manager/model/assigned_worker.py
@@ -29,14 +29,8 @@ from flamenco.manager.model_utils import (  # noqa: F401
 from flamenco.manager.exceptions import ApiAttributeError
 
 
-def lazy_import():
-    from flamenco.manager.model.assigned_worker import AssignedWorker
-    from flamenco.manager.model.task_status import TaskStatus
-    globals()['AssignedWorker'] = AssignedWorker
-    globals()['TaskStatus'] = TaskStatus
 
-
-class EventTaskUpdate(ModelNormal):
+class AssignedWorker(ModelNormal):
     """NOTE: This class is auto generated by OpenAPI Generator.
     Ref: https://openapi-generator.tech
 
@@ -72,7 +66,6 @@ class EventTaskUpdate(ModelNormal):
         This must be a method because a model may have properties that are
         of type self, this must run after the class is loaded
         """
-        lazy_import()
         return (bool, date, datetime, dict, float, int, list, str, none_type,)  # noqa: E501
 
     _nullable = False
@@ -87,18 +80,9 @@ class EventTaskUpdate(ModelNormal):
             openapi_types (dict): The key is attribute name
                 and the value is attribute type.
         """
-        lazy_import()
         return {
-            'id': (str,),  # noqa: E501
-            'job_id': (str,),  # noqa: E501
             'name': (str,),  # noqa: E501
-            'updated': (datetime,),  # noqa: E501
-            'status': (TaskStatus,),  # noqa: E501
-            'activity': (str,),  # noqa: E501
-            'steps_completed': (int,),  # noqa: E501
-            'steps_total': (int,),  # noqa: E501
-            'worker': (AssignedWorker,),  # noqa: E501
-            'previous_status': (TaskStatus,),  # noqa: E501
+            'uuid': (str,),  # noqa: E501
         }
 
     @cached_property
@@ -107,16 +91,8 @@ class EventTaskUpdate(ModelNormal):
 
 
     attribute_map = {
-        'id': 'id',  # noqa: E501
-        'job_id': 'job_id',  # noqa: E501
         'name': 'name',  # noqa: E501
-        'updated': 'updated',  # noqa: E501
-        'status': 'status',  # noqa: E501
-        'activity': 'activity',  # noqa: E501
-        'steps_completed': 'steps_completed',  # noqa: E501
-        'steps_total': 'steps_total',  # noqa: E501
-        'worker': 'worker',  # noqa: E501
-        'previous_status': 'previous_status',  # noqa: E501
+        'uuid': 'uuid',  # noqa: E501
     }
 
     read_only_vars = {
@@ -126,18 +102,12 @@ class EventTaskUpdate(ModelNormal):
 
     @classmethod
     @convert_js_args_to_python_args
-    def _from_openapi_data(cls, id, job_id, name, updated, status, activity, steps_completed, steps_total, *args, **kwargs):  # noqa: E501
-        """EventTaskUpdate - a model defined in OpenAPI
+    def _from_openapi_data(cls, name, uuid, *args, **kwargs):  # noqa: E501
+        """AssignedWorker - a model defined in OpenAPI
 
         Args:
-            id (str): UUID of the Task
-            job_id (str):
-            name (str): Name of the task
-            updated (datetime): Timestamp of last update
-            status (TaskStatus):
-            activity (str):
-            steps_completed (int):
-            steps_total (int):
+            name (str):
+            uuid (str):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -170,8 +140,6 @@ class EventTaskUpdate(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            worker (AssignedWorker): [optional]  # noqa: E501
-            previous_status (TaskStatus): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
@@ -199,14 +167,8 @@ class EventTaskUpdate(ModelNormal):
         self._configuration = _configuration
         self._visited_composed_classes = _visited_composed_classes + (self.__class__,)
 
-        self.id = id
-        self.job_id = job_id
         self.name = name
-        self.updated = updated
-        self.status = status
-        self.activity = activity
-        self.steps_completed = steps_completed
-        self.steps_total = steps_total
+        self.uuid = uuid
         for var_name, var_value in kwargs.items():
             if var_name not in self.attribute_map and \
                         self._configuration is not None and \
@@ -227,18 +189,12 @@ class EventTaskUpdate(ModelNormal):
     ])
 
     @convert_js_args_to_python_args
-    def __init__(self, id, job_id, name, updated, status, activity, steps_completed, steps_total, *args, **kwargs):  # noqa: E501
-        """EventTaskUpdate - a model defined in OpenAPI
+    def __init__(self, name, uuid, *args, **kwargs):  # noqa: E501
+        """AssignedWorker - a model defined in OpenAPI
 
         Args:
-            id (str): UUID of the Task
-            job_id (str):
-            name (str): Name of the task
-            updated (datetime): Timestamp of last update
-            status (TaskStatus):
-            activity (str):
-            steps_completed (int):
-            steps_total (int):
+            name (str):
+            uuid (str):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -271,8 +227,6 @@ class EventTaskUpdate(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            worker (AssignedWorker): [optional]  # noqa: E501
-            previous_status (TaskStatus): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
@@ -298,14 +252,8 @@ class EventTaskUpdate(ModelNormal):
         self._configuration = _configuration
         self._visited_composed_classes = _visited_composed_classes + (self.__class__,)
 
-        self.id = id
-        self.job_id = job_id
         self.name = name
-        self.updated = updated
-        self.status = status
-        self.activity = activity
-        self.steps_completed = steps_completed
-        self.steps_total = steps_total
+        self.uuid = uuid
         for var_name, var_value in kwargs.items():
             if var_name not in self.attribute_map and \
                         self._configuration is not None and \
